--- a/pages/login.tmpl
+++ b/pages/login.tmpl
@@ -1,1 +1,26 @@
-login.tmpl
+{{define "login"}}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Micro Login</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+
+    <style type="text/css">
+        #login {
+            width: 320px; 
+            margin: 40px auto; 
+            padding: 10px; 
+            border-style: none; 
+            border-width: 1px; 
+            box-sizing: border-box;
+        }
+    </style>
+
+</head>
+<body>
+{{template "login-cdn-library" .}}
+{{template "login-script" .}}
+</body>
+</html>
+{{end}}
