--- a/templates/components/login/login-script.tmpl
+++ b/templates/components/login/login-script.tmpl
@@ -1,3 +1,4 @@
+{{define "login-script"}}
     <script type="text/javascript">
       var lock = new Auth0Lock('L5pcKk1Nswc5aDK6pr5KJ5uEB8WUa6v8', 'laux.auth0.com', {
         container: 'login-inline',
@@ -24,3 +25,4 @@
       });
       });
     </script>
+{{end}}
