split pages into login and home, now works with auth0

--- a/pages/login.tmpl
+++ b/pages/login.tmpl
@@ -19,6 +19,9 @@
 
 </head>
 <body>
+<img alt="avatar" id="avatar" style="display:none;">
+<p>Welcome <span id="nickname"></span></p>
+{{template "login-element" .}}
 {{template "login-cdn-library" .}}
 {{template "login-script" .}}
 </body>
